// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmissionDetailsComponent should create 1`] = `
<vtm-emission-details
  testType={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Emission standard 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-emissionStandard"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Smoke test "K" limit applied (m 
        <sup>
          1
        </sup>
        )
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-smokeTestKLimitApplied"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Fuel type 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-fuelType"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Modification type 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-modType"
      >
        
        
         1 - Test 
      </dd>
    </div>
    
    
    
  </dl>
</vtm-emission-details>
`;

exports[`EmissionDetailsComponent should render edit template if editState is EDIT 1`] = `
<vtm-emission-details
  editState={[Function Number]}
  testType={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Emission standard 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-emissionStandard"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Smoke test "K" limit applied (m 
        <sup>
          1
        </sup>
        )
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-smokeTestKLimitApplied"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Fuel type 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-fuelType"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Modification type 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-modType"
      >
        
        
         1 - Test 
      </dd>
    </div>
    
    
    
  </dl>
</vtm-emission-details>
`;

exports[`EmissionDetailsComponent should render view template if editState is VIEW_ONLY 1`] = `
<vtm-emission-details
  editState="0"
  testType={[Function Object]}
>
  <dl
    class="govuk-summary-list"
  >
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Emission standard 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-emissionStandard"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
        Smoke test "K" limit applied (m 
        <sup>
          1
        </sup>
        )
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-smokeTestKLimitApplied"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Fuel type 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-fuelType"
      >
         - 
      </dd>
    </div>
    <div
      class="govuk-summary-list__row"
    >
      <dt
        class="govuk-summary-list__key"
      >
         Modification type 
      </dt>
      <dd
        class="govuk-summary-list__value"
        id="test-modType"
      >
        
        
         1 - Test 
      </dd>
    </div>
    
    
    
  </dl>
</vtm-emission-details>
`;
